# paperdeck

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: CHANGELOG.md  CLI_TEST_GUIDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  demo_cli.sh  test_extraction_manual.py  test_extraction_simple.py
examples/: README.md  advanced_usage.py  basic_usage.py
prompts/: _metadata.json
prompts/templates/: _metadata.json  accessible.txt  beamer_base.tex  default.txt  hangeul.txt  pedagogical.txt  technical.txt
src/paperdeck/ai/: openai_adapter.py  orchestrator.py  retry_helpers.py  service.py
src/paperdeck/cli/: __init__.py  commands.py  main.py
src/paperdeck/core/: config.py  exceptions.py  models.py
src/paperdeck/extraction/: __init__.py  docscalpel_adapter.py  element_processor.py  elements.py  extractor.py  pdf_processor.py  text_extractor.py  text_parser.py  text_sanitizer.py
src/paperdeck/generation/: __init__.py  latex_generator.py  slide_organizer.py
src/paperdeck/models/: extraction_result.py  llm_request_context.py
src/paperdeck/prompts/: manager.py
src/paperdeck/services/: __init__.py  generation_service.py
tests/fixtures/sample_papers/: README.md
tests/integration/: test_cli.py  test_end_to_end.py  test_figure_extraction.py  test_text_extraction.py  test_workflow.py
tests/unit/: test_ai_contracts.py  test_ai_services.py  test_config.py  test_exceptions.py  test_extraction.py  test_generation.py  test_models.py  test_prompts.py
tests/unit/core/: test_config.py
tests/unit/extraction/: test_docscalpel_adapter.py  test_element_processor.py  test_text_extractor.py  test_text_sanitizer.py
tests/unit/generation/: test_figure_latex.py
tests/unit/models/: test_extraction_result.py  test_llm_request_context.py  test_paper.py
tests/unit/services/: test_generation_service.py
